apps/fibapi/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fibapi
  template:
    metadata:
      labels:
        app: fibapi
    spec:
      containers:
      - name: fibapi
        image: henrsand/fibapi:eebe65ac3f1cabb7f09567d006da6adb2e57b1a6
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 5
